@@ -1,5 +1,6 @@
 Upcoming:
 - The dialing device is infusable again
+- Fixed the counter module to work again (fix partially done by joelra)
 
 1.19-5.0.0:
 - Port to 1.19
